// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> should match snapshot with user details 1`] = `
<Fragment>
  <h6
    className="expand-sidebar"
    onClick={[Function]}
  >
    &gt;&gt;&gt;
  </h6>
  <div
    className="sidebar"
  >
    <div>
      <div
        className="logout-container text-center"
      >
        <button
          className="logout"
          onClick={[MockFunction]}
        >
          logout
        </button>
      </div>
      <hr />
      <p
        className="text-center"
      >
        "Create/Edit/Delete your own cheat categories or mark them as public/private"
      </p>
      <hr />
      <p
        className="text-center"
      >
        "Edit/Delete a command or add multiple commands to any of your cheat categories"
      </p>
      <hr />
      <p
        className="text-center"
      >
        "Click on a cheat command to copy it to your clipboard"
      </p>
      <hr />
      <p
        className="text-center"
      >
        "Find keyword related commands using the keyword search bar"
      </p>
      <hr />
    </div>
    <h6
      className="text-center"
    >
      © Faith Adekunle
    </h6>
  </div>
</Fragment>
`;

exports[`<Sidebar /> should match snapshot without user details 1`] = `
<Fragment>
  <h6
    className="expand-sidebar"
    onClick={[Function]}
  >
    &gt;&gt;&gt;
  </h6>
  <div
    className="sidebar"
  >
    <div>
      <div
        className="login-or-register"
      >
        <Connect(LoginOrRegister) />
      </div>
      <hr />
      <p
        className="text-center"
      >
        "Create/Edit/Delete your own cheat categories or mark them as public/private"
      </p>
      <hr />
      <p
        className="text-center"
      >
        "Edit/Delete a command or add multiple commands to any of your cheat categories"
      </p>
      <hr />
      <p
        className="text-center"
      >
        "Click on a cheat command to copy it to your clipboard"
      </p>
      <hr />
      <p
        className="text-center"
      >
        "Find keyword related commands using the keyword search bar"
      </p>
      <hr />
    </div>
    <h6
      className="text-center"
    >
      © Faith Adekunle
    </h6>
  </div>
</Fragment>
`;
